k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-toto-MonApppp-backend-service
  namespace: prod-toto-MonApppp-backend
spec:
  ports:
    - port: 3333
      targetPort: 3333
  selector:
    app: prod-toto-MonApppp-backend
