k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-toto-MonApppp-backend-ingress
  namespace: prod-toto-MonApppp-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - testdomain.api.flapi.org
      secretName: prod-toto-MonApppp-backend-tls
  rules:
    - host: testdomain.api.flapi.org
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: prod-toto-MonApppp-backend-service
                port:
                  number: 3333
